--- a/info_keep_iced/Cargo.toml
+++ b/info_keep_iced/Cargo.toml
@@ -3,6 +3,7 @@ name = "info_keep_iced"
 version = "0.2.0"
 edition = "2018"
 
+# Very bad implimentation
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
