--- a/info_keep_lib/Cargo.toml
+++ b/info_keep_lib/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "info_keep_lib"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+time = "0.3.4"
 
 [target.'cfg(not(target_arch="wasm32"))'.dependencies]
 sled = { version = "0.34.6", features = ["compression"] }
