--- a/info_keep_iced/Cargo.toml
+++ b/info_keep_iced/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 iced = { version="0.3" }
-info_keep_lib = {path = "../info_keep_lib" }
+info_keep_lib = {git = "https://github.com/Rdna123/Info_Keep.git", tag = "v0.2.0"}
 chrono = "0.4.19"
 
 # Secuity Patch
