--- a/info_keep_clap/Cargo.toml
+++ b/info_keep_clap/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "info_keep_clap"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2018"
-
+# TODO: Added Version command
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
