--- a/info_keep_lib/Cargo.toml
+++ b/info_keep_lib/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "info_keep_lib"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2018"
-
+# TODO: Release v0.4.0
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -11,8 +11,9 @@ time = "0.3.4"
 [target.'cfg(not(target_arch="wasm32"))'.dependencies]
 sled = { version = "0.34.6", features = ["compression"] }
 
-[target.'cfg(target_arch="wasm32")'.dependencies]
-sled = "0.34.6"
-
+#Support not added to library yet
+#[target.'cfg(target_arch="wasm32")'.dependencies]
+#sled = "0.34.6"
+# TODO: Update Dependecies
 
 
